avcodec/mjpegdec: check for malloc failure of blocks[] and last_nnz[]

Fixes null pointer dereference
Fixes Ticket2947

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>